    \code{siaf.step} a step function.

    \item Inference for neighbourhood weights in \code{hhh4()} models:
    \code{W.powerlaw()} and \code{W.np()} both implement weights
    depending on the order of neighbourhood between regions, a power-law
    decay and nonparametric weights (i.e., unconstrained estimation of
    individual weights for each neighbourhood order).
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{iafplot()} invisibly returns a matrix containing the plotted
    values of the (scaled) interaction function. Previously, nothing
    (\code{NULL}) was returned.
    \item Take \code{verbose=FALSE} in \code{hhh4()} more seriously.
    \item \code{hhh4()} issues a \code{warning()} if non-convergent.
    \item \code{oneStepAhead()}:
    \itemize{
      \item Default of \code{tp[2]} is now the penultimate time point of
      the fitted subset (not of the whole \code{stsObj}).
      \item \code{+1} on rownames of \code{$pred} (now the same as for
      \code{$observed}). 
    }
    \item Fitted \code{hhh4()} objects no longer contain the associated
    \code{"sts"} data twice: it is now only stored as \code{$stsObj}
    component, the hidden duplicate in \code{$control$data$.sts} was
    dropped, which makes fitted objects substantially smaller.
    \item \code{siaf.lomax()} is now defunct (it has been deprecated
    since version 1.5-2); use \code{siaf.powerlaw()} instead.
    \item Unsupported options (\code{logpars=FALSE},
    \code{effRangeProb}) have been dropped from \code{siaf.powerlaw()}
    and \code{siaf.powerlawL()}.
    \item \code{update.twinstim()} no longer uses recursive
    \code{modifyList()} for the \code{control.siaf} argument. Instead,
    the supplied new list elements (\code{"F"}, \code{"Deriv"})
    completely replace the respective elements from the original
    \code{control.siaf} specification.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item Fixed a bug in \code{algo.glrnb} where the overdispersion